--- a/app/views/key_values/index.html.erb
+++ b/app/views/key_values/index.html.erb
@@ -26,4 +26,6 @@
 
 <br>
 
-<%= link_to 'New Key Value', new_key_value_path %>
+<% if can? :manage, KeyValue %>
+  <%= link_to 'New Key Value', new_key_value_path %>
+<% end %>
