--- a/app/views/market_listings/index.html.erb
+++ b/app/views/market_listings/index.html.erb
@@ -8,4 +8,6 @@
 
 <br>
 
-<%= link_to 'New Market Listing', new_market_listing_path %>
+<% if can? :manage, MarketListing %>
+  <%= link_to 'New Market Listing', new_market_listing_path %>
+<% end %>
