--- a/app/views/steam_trade_items/_steam_trade_item.html.erb
+++ b/app/views/steam_trade_items/_steam_trade_item.html.erb
@@ -1,5 +1,12 @@
-<%= content_tag(:div, class: get_steam_trade_item_class(steam_trade_item), style: get_steam_trade_style(steam_trade_item)) do %>
-  <% if count %>
-    <span class="count"><%= " #{count}" %></span>
+<% data = { :toggle => "tooltip", :title => steam_trade_item.full_name } %>
+<% item_class = get_steam_trade_item_class(steam_trade_item) %>
+<% style = get_steam_trade_style(steam_trade_item) %>
+<% query = get_steam_trade_query(steam_trade_item) %>
+
+<%= link_to "/stats/search?#{query.to_query}", class: "item-link", target: "_blank" do %>
+  <%= content_tag(:div, data: data, class: item_class, style: style) do %>
+    <% if count %>
+      <span class="count"><%= " #{count}" %></span>
+    <% end %>
   <% end %>
 <% end %>
