--- a/app/views/steam_trades/_steam_trade.html.erb
+++ b/app/views/steam_trades/_steam_trade.html.erb
@@ -1,6 +1,9 @@
 <% received_items, given_items = steam_trade.steam_trade_items.partition(&:is_their_item) %>
 
 <%= content_tag(:div, id: "steam-trade-#{steam_trade.id}", class: ["steam-trade"]) do %>
+  <div class="header">
+    <%= link_to "Trade ##{steam_trade.id}", steam_trade %>
+  </div>
   <%= render partial: 'steam_trade_items/steam_trade_items', :locals => { steam_trade_items: given_items, who: "my" } %>
   <div class="rule"></div>
   <%= render partial: 'steam_trade_items/steam_trade_items', :locals => { steam_trade_items: received_items, who: "them" } %>
