--- a/app/views/steam_trade_items/_steam_trade_item.html.erb
+++ b/app/views/steam_trade_items/_steam_trade_item.html.erb
@@ -3,9 +3,9 @@
 <% style = get_steam_trade_style(steam_trade_item) %>
 <% query = get_steam_trade_query(steam_trade_item) %>
 
-<%= link_to "/stats/search?#{query.to_query}", class: "item-link", target: "_blank" do %>
+<%= link_to search_index_path(query), class: "item-link", target: "_blank" do %>
   <%= content_tag(:div, data: data, class: item_class, style: style) do %>
-    <% if count %>
+    <% if defined?(count) %>
       <span class="count"><%= " #{count}" %></span>
     <% end %>
   <% end %>
