--- a/app/views/marketplace_sales/index.html.erb
+++ b/app/views/marketplace_sales/index.html.erb
@@ -2,9 +2,8 @@
 
 <h1>Marketplace Sales</h1>
 
-<%= will_paginate @marketplace_sales %>
 <%= render @marketplace_sales %>
-<%= will_paginate @marketplace_sales %>
+<%== pagy_nav(@pagy) %>
 
 <br>
 
