--- a/app/views/search/_market_listings_purchases.html.erb
+++ b/app/views/search/_market_listings_purchases.html.erb
@@ -3,5 +3,5 @@
     <%= render @market_listings_purchases %>
   </div>
   
-  <%= paginate @market_listings_purchases, :params => params.merge({ :controller => :search, :action => :market_listings_purchases }) %>
+  <%== pagy_nav(@pagy_market_listings_purchases) %>
 </div>
