--- a/app/views/search/_marketplace_sales.html.erb
+++ b/app/views/search/_marketplace_sales.html.erb
@@ -3,5 +3,5 @@
     <%= render @marketplace_sale_items %>
   </div>
   
-  <%= paginate @marketplace_sale_items, :params => params.merge({ :controller => :search, :action => :marketplace_sales }) %>
+  <%== pagy_nav(@pagy_marketplace_sale_items) %>
 </div>
