--- a/app/views/steam_trades/index.html.erb
+++ b/app/views/steam_trades/index.html.erb
@@ -5,7 +5,7 @@
 <div class="steam-trades">
   <%= render @steam_trades %>
 </div>
-<%= will_paginate @steam_trades %>
+<%== pagy_nav(@pagy) %>
 
 <br>
 
