--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,8 +1,8 @@
 <%= render 'search/query_options', { query: @query_params } %>
 
-<div class="row">
-  <div class="col" id="sales">
-    <h1>Sales</h1>
+<div class="grid grid-cols-2 gap-4">
+  <div id="sales">
+    <h1 class="font-bold text-xl">Sales</h1>
     <% if @steam_trades_sales.any? %>
       <h2>Steam Trades</h2>
       <%= render 'search/steam_trades_sales' %>
@@ -18,8 +18,8 @@
     <% end %>
   </div>
   
-  <div class="col" id="purchases">
-    <h1>Purchases</h1>
+  <div id="purchases">
+    <h1 class="font-bold text-xl">Purchases</h1>
     <% if @steam_trades_purchases.any? %>
       <h2>Steam Trades</h2>
       <%= render 'search/steam_trades_purchases' %>
