--- a/app/assets/stylesheets/steam_trade.scss
+++ b/app/assets/stylesheets/steam_trade.scss
@@ -1,21 +1,16 @@
 
 .steam-trade {
-    margin-bottom: 0.6em;
-    box-sizing: border-box;
-    background-color: #C7C7C7;
-    border-radius: 0.8em;
-    padding: 0.8em;
+    color: #DDDDDD;
+    
+    a {
+        color: #EEEEEE;
+    }
 }
 
 .steam-trade .rule {
-    border-bottom: 1px solid #8C8C8C;
+    border-bottom: 1px solid #252525;
     width: 100%;
     height: 0;
-    margin: 0.8em 0;
-}
-
-.steam-trade .steam-trade-items {
-    
 }
 
 .steam-trade-items {
