--- a/app/views/search/_market_listings_purchases.html.erb
+++ b/app/views/search/_market_listings_purchases.html.erb
@@ -1,5 +1,5 @@
 <div class="pagination-container" id="market-listings-purchases">
-  <div class="market-listings">
+  <div class="market-listings mb-2">
     <%= render @market_listings_purchases %>
   </div>
   
