--- a/app/views/search/_marketplace_sales.html.erb
+++ b/app/views/search/_marketplace_sales.html.erb
@@ -1,5 +1,5 @@
 <div class="pagination-container" id="marketplace-sales">
-  <div class="marketplace-sales">
+  <div class="marketplace-sales mb-2">
     <%= render @marketplace_sale_items %>
   </div>
   
