--- a/app/views/search/_steam_trades_purchases.html.erb
+++ b/app/views/search/_steam_trades_purchases.html.erb
@@ -1,4 +1,4 @@
-<div class="pagination-container" id="steam-trades-purchases">
+<div class="pagination-container mb-4" id="steam-trades-purchases">
   <div class="steam-trades">
     <%= render @steam_trades_purchases %>
   </div>
