--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body class="bg-slate-200">
-    <main id="main" class="container mx-auto">
+    <main id="main" class="container mx-auto pt-4 pb-4">
       <% unless flash.empty? %>
         <script type="text/javascript">
           <% flash.each do |f| %>
