--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -2,31 +2,45 @@
 
 <div class="grid grid-cols-2 gap-4">
   <div id="sales">
-    <h1 class="font-bold text-xl">Sales</h1>
+    <h1 class="font-bold underline underline-offset-8 text-2xl mt-4 mb-4">
+      Sales
+    </h1>
     <% if @steam_trades_sales.any? %>
-      <h2>Steam Trades</h2>
+      <h2 class="text-s mb-2">
+        Steam Trades
+      </h2>
       <%= render 'search/steam_trades_sales' %>
     <% end %>
     <% if @marketplace_sale_items.any? %>
-      <h2>Marketplace Sales</h2>
+      <h2 class="text-s mb-2">
+        Marketplace Sales
+      </h2>
       <%= render 'search/marketplace_sales' %>
     <% end %>
     
     <% if @market_listings_sales.any? %>
-      <h2>Market Listings</h2>
+      <h2 class="text-s mb-2">
+        Market Listings
+      </h2>
       <%= render 'search/market_listings_sales' %>
     <% end %>
   </div>
   
   <div id="purchases">
-    <h1 class="font-bold text-xl">Purchases</h1>
+    <h1 class="font-bold underline underline-offset-8 text-2xl mt-4 mb-4">
+      Purchases
+    </h1>
     <% if @steam_trades_purchases.any? %>
-      <h2>Steam Trades</h2>
+      <h2 class="text-s mb-2">
+        Steam Trades
+      </h2>
       <%= render 'search/steam_trades_purchases' %>
     <% end %>
     
     <% if @market_listings_purchases.any? %>
-      <h2>Market Listings</h2>
+      <h2 class="text-s mb-2">
+        Market Listings
+      </h2>
       <%= render 'search/market_listings_purchases' %>
     <% end %>
   </div>
