more styling + removing useless qualities

--- a/app/assets/stylesheets/easy-autocomplete.css
+++ b/app/assets/stylesheets/easy-autocomplete.css
@@ -8,7 +8,7 @@
  */
 
  .easy-autocomplete {
-    position: relative;
+    display: inline;
   }
   
   .easy-autocomplete input:hover, .easy-autocomplete input:focus {
