--- a/app/views/search/_market_listings_sales.html.erb
+++ b/app/views/search/_market_listings_sales.html.erb
@@ -1,4 +1,4 @@
-<div class="pagination-container" id="market-listings-sales">
+<div class="pagination-container mb-4" id="market-listings-sales">
   <div class="market-listings mb-2">
     <%= render @market_listings_sales %>
   </div>
