--- a/app/views/search/_marketplace_sales.html.erb
+++ b/app/views/search/_marketplace_sales.html.erb
@@ -1,4 +1,4 @@
-<div class="pagination-container" id="marketplace-sales">
+<div class="pagination-container mb-4" id="marketplace-sales">
   <div class="marketplace-sales mb-2">
     <%= render @marketplace_sale_items %>
   </div>
