--- a/app/views/search/_market_listings_purchases.html.erb
+++ b/app/views/search/_market_listings_purchases.html.erb
@@ -1,4 +1,4 @@
-<div class="pagination-container" id="market-listings-purchases">
+<div class="pagination-container mb-4" id="market-listings-purchases">
   <div class="market-listings mb-2">
     <%= render @market_listings_purchases %>
   </div>
